[project]
name = "langchain-box-mcp-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-mcp-adapters>=0.0.8",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.29",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
